[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/Menu.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/noto-sans/NotoSansRegular.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/themes/Blur.shader" type="Shader" id=5]
[ext_resource path="res://assets/themes/BlurTexture.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = ExtResource( 5 )
shader_param/amount = 2.0
_sections_unfolded = [ "shader_param" ]

[node name="PauseMenu" type="CanvasLayer"]

layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="PausePanel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Theme", "custom_styles" ]

[node name="OptionsButton" type="Button" parent="PausePanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 416.0
margin_right = 196.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="QuitButton" type="Button" parent="PausePanel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 556.0
margin_right = 196.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="BorderRight" type="Line2D" parent="PausePanel" index="2"]

material = SubResource( 1 )
position = Vector2( 300, 0 )
points = PoolVector2Array( 0, 0, 0, 900 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 364728224
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Material", "Transform" ]

[node name="OptionsMenu" parent="." index="1" instance=ExtResource( 4 )]

visible = false
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" index="0"]

material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Material" ]

[connection signal="resized" from="PausePanel" to="." method="_on_PausePanel_resized"]


